Cambios que debieron haberse subido en el primer mensaje

--- a/legal/terminos-condiciones.html
+++ b/legal/terminos-condiciones.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Términos y Condiciones - Jech Company</title>
   <!-- Favicon y Tailwind CSS (ajusta la ruta según tu proyecto) -->
-  <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../assets/img/logo.png" type="image/x-icon">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800">
