--- a/index.html
+++ b/index.html
@@ -11,21 +11,18 @@
 </head>
 <body class="text-gray-800 bg-white">
 
-  <!-- NAVBAR -->
-<header class="sticky top-0 z-50 bg-gradient-to-r from-[#111827] to-[#1F2937]">
+<!-- NAVBAR -->
+<header class="sticky top-0 z-40 bg-gradient-to-r from-[#111827] to-[#000000]">
   <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
 
     <!-- Logo + Nombre -->
     <a href="index.html" class="flex items-center space-x-2">
-      <!-- Ajusta el tamaño del logo a tu gusto -->
       <img src="assets/img/logo.png" alt="Logo Jech Company" class="w-10 h-auto">
       <span class="text-white text-lg font-semibold">Jech Company</span>
     </a>
     
     <!-- Menú de escritorio (oculto en mobile) -->
     <div class="hidden md:flex items-center space-x-6">
-      <!-- Cada enlace con clases "nav-link" para que el script resalte la página activa -->
-      <!-- Por defecto: text-white. Hover: text-[#22D3EE]. -->
       <a href="index.html" 
          class="nav-link text-white hover:text-[#22D3EE] transition-colors">
         Inicio
@@ -43,9 +40,9 @@
         Contacto
       </a>
     </div>
-    
-    <!-- Botón hamburguesa (visible en mobile) -->
-    <button id="menuBtn" class="md:hidden focus:outline-none">
+
+    <!-- Botón hamburguesa (solo en mobile) -->
+    <button id="menuOpenBtn" class="md:hidden focus:outline-none">
       <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" stroke-width="2"
            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path stroke-linecap="round" stroke-linejoin="round"
@@ -53,31 +50,47 @@
       </svg>
     </button>
   </nav>
+</header>
 
-  <!-- Menú Móvil (slide-in from right) -->
-  <div id="mobileMenu"
-       class="fixed top-0 right-0 h-screen w-64 bg-[#1F2937] transform translate-x-full 
-              transition-transform duration-300 md:hidden flex flex-col pt-20 px-6 space-y-6">
+<!-- MENÚ MÓVIL -->
+<div 
+  id="mobileMenu"
+  class="fixed top-0 right-0 h-screen w-64 bg-[#111827] transform translate-x-full
+         transition-transform duration-300 md:hidden z-50"
+>
+  <!-- Botón Cerrar (X), alineado en el mismo plano horizontal -->
+  <div class="h-16 flex items-center justify-end px-4">
+    <button id="menuCloseBtn" class="focus:outline-none">
+      <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" stroke-width="2"
+           viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round"
+              d="M6 18L18 6M6 6l12 12"/>
+      </svg>
+    </button>
+  </div>
 
-    <!-- Enlaces en mobile (mismas clases para poder marcar activo) -->
-    <a href="index.html" 
+  <!-- Enlaces del menú móvil -->
+  <nav class="flex flex-col space-y-6 px-6 mt-4">
+    <a href="index.html"
        class="nav-link text-white hover:text-[#22D3EE] transition-colors">
       Inicio
     </a>
-    <a href="rubros.html" 
+    <a href="rubros.html"
        class="nav-link text-white hover:text-[#22D3EE] transition-colors">
       Rubros
     </a>
-    <a href="nosotros.html" 
+    <a href="nosotros.html"
        class="nav-link text-white hover:text-[#22D3EE] transition-colors">
       Nosotros
     </a>
-    <a href="contacto.html" 
+    <a href="contacto.html"
        class="nav-link text-white hover:text-[#22D3EE] transition-colors">
       Contacto
     </a>
-  </div>
-</header>
+  </nav>
+</div>
+
+
   
 
   
