Imagenes agregadas a otras paginas iniciales

--- a/nosotros.html
+++ b/nosotros.html
@@ -133,7 +133,7 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <!-- Miembro 1 -->
         <div class="bg-white p-6 rounded shadow hover:shadow-lg transition-shadow text-center">
-          <img src="https://source.unsplash.com/random/150x150?person" alt="Miembro"
+          <img src="assets/img/trabajador3.png" alt="Miembro"
                class="mx-auto rounded-full mb-4">
           <h3 class="font-semibold text-xl text-[#000000]">Juan Hernández</h3>
           <p class="text-gray-600 mb-2">CEO & Fundador</p>
@@ -141,7 +141,7 @@
         </div>
         <!-- Miembro 2 -->
         <div class="bg-white p-6 rounded shadow hover:shadow-lg transition-shadow text-center">
-          <img src="https://source.unsplash.com/random/151x151?person" alt="Miembro"
+          <img src="assets/img/trabajador4.png" alt="Miembro"
                class="mx-auto rounded-full mb-4">
           <h3 class="font-semibold text-xl text-[#000000]">María Velázquez</h3>
           <p class="text-gray-600 mb-2">CTO & Líder de Desarrollo</p>
@@ -149,7 +149,7 @@
         </div>
         <!-- Miembro 3 -->
         <div class="bg-white p-6 rounded shadow hover:shadow-lg transition-shadow text-center">
-          <img src="https://source.unsplash.com/random/152x152?person" alt="Miembro"
+          <img src="assets/img/trabajador5.png" alt="Miembro"
                class="mx-auto rounded-full mb-4">
           <h3 class="font-semibold text-xl text-[#000000]">Ricardo Lima</h3>
           <p class="text-gray-600 mb-2">Director de Producción Audiovisual</p>
