--- a/producto.html
+++ b/producto.html
@@ -93,10 +93,10 @@
   <!-- CONTENIDO DEL PRODUCTO -->
   <main class="max-w-4xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
     <h1 class="text-3xl font-bold mb-4 text-[#000000]">Campaña de Marketing Viral “GalaxyBuzz”</h1>
-    <img src="https://source.unsplash.com/random/800x500?marketing" alt="Campaña Marketing"
+    <img src="assets/img/galaxybuzz.png" alt="Campaña Marketing"
          class="w-full h-auto mb-6 rounded shadow">
     <p class="text-gray-700 mb-6 leading-relaxed">
-      Nuestra campaña “GalaxyBuzz” logró posicionar la marca ficticia <strong>StarSpark</strong> 
+      Nuestra campaña “GalaxyBuzz” logró posicionar la marca <strong>StarSpark</strong> 
       como líder en tecnología espacial. Aplicamos técnicas de marketing digital, 
       influencers y creatividad disruptiva para generar más de 
       <strong class="text-[#22D3EE]">10 millones de interacciones</strong> 
@@ -118,7 +118,7 @@
     <section class="mb-8">
       <h2 class="text-2xl font-semibold mb-3 text-[#000000]">Creadores</h2>
       <div class="flex items-center space-x-4 mb-4">
-        <img src="https://source.unsplash.com/random/100x100?person" alt="Creadora"
+        <img src="assets/img/trabajador2.png" alt="Creadora"
              class="w-16 h-16 rounded-full object-cover">
         <div>
           <p class="font-bold text-[#000000]">Laura Gómez</p>
@@ -127,7 +127,7 @@
         </div>
       </div>
       <div class="flex items-center space-x-4">
-        <img src="https://source.unsplash.com/random/101x101?person" alt="Creador"
+        <img src="assets/img/trabajador1.png" alt="Creador"
              class="w-16 h-16 rounded-full object-cover">
         <div>
           <p class="font-bold text-[#000000]">Miguel Torres</p>
