Mejora colores de pagina nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -90,77 +90,97 @@
   </nav>
 </div>
 
-  <!-- SECCIÓN SOBRE NOSOTROS -->
-  <main class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
-    <h1 class="text-3xl font-bold mb-6 text-center text-[#000000]">Quiénes Somos</h1>
-    <p class="text-gray-700 leading-relaxed mb-8 max-w-3xl mx-auto text-center">
-      Jech Company nació con la visión de revolucionar múltiples industrias 
-      mediante soluciones creativas e integrales. Nuestro equipo multidisciplinario 
-      trabaja incansablemente para transformar ideas en experiencias únicas.
+<!-- SECCIÓN SOBRE NOSOTROS MEJORADA -->
+<main class="w-full bg-gradient-to-b from-[#111827] to-[#1E293B] text-white py-10 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-7xl mx-auto text-center">
+    <h1 class="text-4xl font-bold mb-6 text-[#22D3EE] ">Quiénes Somos</h1>
+    <p class="text-gray-300 leading-relaxed max-w-3xl mx-auto">
+      En Jech Company, combinamos creatividad, tecnología e innovación para revolucionar industrias. 
+      Nuestro equipo multidisciplinario trabaja incansablemente para convertir ideas en experiencias únicas.
+    </p>
+  </div>
+
+  <!-- Misión, Visión, Valores con hover iluminado -->
+  <div class="mt-12 mb-8 max-w-6xl mx-auto grid md:grid-cols-3 gap-8">
+    <div class="bg-[#1F2937] p-6 rounded-lg border border-[#22D3EE] 
+                shadow-md hover:shadow-[0_0_15px_#22D3EE] hover:border-[#22D3EE] 
+                hover:scale-105 transition-all duration-300">
+      <h2 class="text-xl font-semibold text-white mb-2">Misión</h2>
+      <p class="text-gray-400">
+        Empoderar a nuestros clientes con innovación y creatividad, brindando soluciones de alto impacto.
+      </p>
+    </div>
+
+    <div class="bg-[#1F2937] p-6 rounded-lg border border-[#22D3EE] 
+                shadow-md hover:shadow-[0_0_15px_#22D3EE] hover:border-[#22D3EE] 
+                hover:scale-105 transition-all duration-300">
+      <h2 class="text-xl font-semibold text-white mb-2">Visión</h2>
+      <p class="text-gray-400">
+        Ser la empresa líder global en soluciones creativas, reconocida por la excelencia y talento de su equipo.
+      </p>
+    </div>
+
+    <div class="bg-[#1F2937] p-6 rounded-lg border border-[#22D3EE] 
+                shadow-md hover:shadow-[0_0_15px_#22D3EE] hover:border-[#22D3EE] 
+                hover:scale-105 transition-all duration-300">
+      <h2 class="text-xl font-semibold text-white mb-2">Valores</h2>
+      <ul class="list-none text-gray-400 space-y-1">
+        <li>🔥 <span class="text-[#22D3EE]">Creatividad</span></li>
+        <li>🤝 <span class="text-[#22D3EE]">Compromiso</span></li>
+        <li>💎 <span class="text-[#22D3EE]">Calidad</span></li>
+        <li>👥 <span class="text-[#22D3EE]">Colaboración</span></li>
+        <li>🛡️ <span class="text-[#22D3EE]">Transparencia</span></li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- EQUIPO DESTACADO -->
+  <section class="w-full text-white text-center py-10">
+    <h2 class="text-3xl font-bold mb-6 text-[#E91E63] ">Nuestro Talento</h2>
+    <p class="text-gray-300 mb-8 max-w-2xl mx-auto">
+      Un equipo de profesionales apasionados, listos para llevar tus ideas al siguiente nivel.
     </p>
 
-    <!-- Misión, Visión, Valores -->
-    <section class="flex flex-col md:flex-row gap-8 mb-12">
-      <div class="md:w-1/3 bg-[#E4E7EB] p-6 rounded shadow">
-        <h2 class="text-xl font-semibold mb-2 text-[#000000]">Misión</h2>
-        <p class="text-gray-700">
-          Empoderar a nuestros clientes a través de la innovación y la creatividad, 
-          brindando soluciones personalizadas de alto impacto en cada rubro.
-        </p>
+    <div class="max-w-6xl mx-auto grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      <div class="bg-[#1F2937] p-6 rounded-lg border border-[#E91E63] 
+                  shadow-md hover:shadow-[0_0_15px_#E91E63] hover:border-[#E91E63] 
+                  hover:scale-105 transition-all duration-300">
+        <img src="assets/img/trabajador3.png" alt="Juan Hernández" 
+             class="mx-auto rounded-full w-24 h-24 mb-4 border-4 border-[#E91E63]">
+        <h3 class="font-semibold text-xl text-white">Juan Hernández</h3>
+        <p class="text-gray-400 mb-2">CEO & Fundador</p>
+        <a href="#" class="text-[#E91E63] hover:underline">LinkedIn</a>
       </div>
-      <div class="md:w-1/3 bg-[#E4E7EB] p-6 rounded shadow">
-        <h2 class="text-xl font-semibold mb-2 text-[#000000]">Visión</h2>
-        <p class="text-gray-700">
-          Convertirnos en la compañía líder mundial en soluciones integrales, 
-          reconocida por su talento humano y la excelencia en cada proyecto.
-        </p>
-      </div>
-      <div class="md:w-1/3 bg-[#E4E7EB] p-6 rounded shadow">
-        <h2 class="text-xl font-semibold mb-2 text-[#000000]">Valores</h2>
-        <ul class="list-disc list-inside text-gray-700 space-y-1">
-          <li>Creatividad</li>
-          <li>Compromiso</li>
-          <li>Calidad</li>
-          <li>Colaboración</li>
-          <li>Transparencia</li>
-        </ul>
-      </div>
-    </section>
 
-    <!-- Equipo Destacado -->
-    <section>
-      <h2 class="text-2xl font-bold mb-6 text-center text-[#000000]">Nuestro Talento</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <!-- Miembro 1 -->
-        <div class="bg-white p-6 rounded shadow hover:shadow-lg transition-shadow text-center">
-          <img src="assets/img/trabajador3.png" alt="Miembro"
-               class="mx-auto rounded-full mb-4">
-          <h3 class="font-semibold text-xl text-[#000000]">Juan Hernández</h3>
-          <p class="text-gray-600 mb-2">CEO & Fundador</p>
-          <a href="#" class="text-[#E91E63] hover:underline">LinkedIn</a>
-        </div>
-        <!-- Miembro 2 -->
-        <div class="bg-white p-6 rounded shadow hover:shadow-lg transition-shadow text-center">
-          <img src="assets/img/trabajador4.png" alt="Miembro"
-               class="mx-auto rounded-full mb-4">
-          <h3 class="font-semibold text-xl text-[#000000]">María Velázquez</h3>
-          <p class="text-gray-600 mb-2">CTO & Líder de Desarrollo</p>
-          <a href="#" class="text-[#E91E63] hover:underline">LinkedIn</a>
-        </div>
-        <!-- Miembro 3 -->
-        <div class="bg-white p-6 rounded shadow hover:shadow-lg transition-shadow text-center">
-          <img src="assets/img/trabajador5.png" alt="Miembro"
-               class="mx-auto rounded-full mb-4">
-          <h3 class="font-semibold text-xl text-[#000000]">Ricardo Lima</h3>
-          <p class="text-gray-600 mb-2">Director de Producción Audiovisual</p>
-          <a href="#" class="text-[#E91E63] hover:underline">LinkedIn</a>
-        </div>
+      <div class="bg-[#1F2937] p-6 rounded-lg border border-[#E91E63] 
+                  shadow-md hover:shadow-[0_0_15px_#E91E63] hover:border-[#E91E63] 
+                  hover:scale-105 transition-all duration-300">
+        <img src="assets/img/trabajador4.png" alt="María Velázquez" 
+             class="mx-auto rounded-full w-24 h-24 mb-4 border-4 border-[#E91E63]">
+        <h3 class="font-semibold text-xl text-white">María Velázquez</h3>
+        <p class="text-gray-400 mb-2">CTO & Líder de Desarrollo</p>
+        <a href="#" class="text-[#E91E63] hover:underline">LinkedIn</a>
       </div>
-    </section>
-  </main>
+
+      <div class="bg-[#1F2937] p-6 rounded-lg border border-[#E91E63] 
+                  shadow-md hover:shadow-[0_0_15px_#E91E63] hover:border-[#E91E63] 
+                  hover:scale-105 transition-all duration-300">
+        <img src="assets/img/trabajador5.png" alt="Ricardo Lima" 
+             class="mx-auto rounded-full w-24 h-24 mb-4 border-4 border-[#E91E63]">
+        <h3 class="font-semibold text-xl text-white">Ricardo Lima</h3>
+        <p class="text-gray-400 mb-2">Director de Producción Audiovisual</p>
+        <a href="#" class="text-[#E91E63] hover:underline">LinkedIn</a>
+      </div>
+    </div>
+  </section>
+</main>
+
+
+
+
 
   <!-- FOOTER -->
-<footer class="bg-[#111827] text-white pt-10 pb-6 mt-8">
+<footer class="bg-[#111827] text-white pt-10 pb-6 ">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
   
       <!-- GRID principal: 3 columnas en desktop, 1 en móvil -->
