--- a/rubros.html
+++ b/rubros.html
@@ -90,63 +90,237 @@
   </nav>
 </div>
 
-  <!-- LISTADO DE RUBROS -->
-  <main class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
-    <h1 class="text-3xl font-bold text-center mb-8">Nuestros Rubros</h1>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-      <!-- Rubro 1 -->
-      <div class="bg-white border rounded-lg shadow hover:shadow-lg p-6">
-        <h2 class="text-xl font-semibold mb-2 text-[#000000]">Marketing</h2>
-        <p class="text-gray-700 mb-4">
-          Posicionamiento de marca, campañas virales, redes sociales e inteligencia de mercados.
-        </p>
-        <a href="producto.html" class="text-[#E91E63] hover:underline">Ver proyectos &rarr;</a>
+<!-- LISTADO DE RUBROS: 9 Tarjetas con CTA "Más Info →" en color ámbar -->
+<main class="w-full bg-gradient-to-b from-[#111827] to-[#1E293B] text-white py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-7xl mx-auto text-center mb-10">
+    <h1 class="text-4xl font-bold mb-4 text-[#22D3EE]">Nuestros Rubros</h1>
+    <p class="text-gray-300 max-w-2xl mx-auto">
+      Exploramos diversos sectores (excepto minería) y ofrecemos soluciones creativas 
+      para impulsar tus proyectos. ¡Descubre cómo podemos ayudarte!
+    </p>
+  </div>
+
+  <!-- Grid de 3 columnas x 3 filas (9 rubros) -->
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
+
+    <!-- Card 1: Marketing (con etiqueta NEW) -->
+    <div 
+      class="relative bg-[#1F2937] rounded-lg shadow-md overflow-hidden 
+             group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
+    >
+      <!-- Etiqueta NEW -->
+      <div 
+        class="absolute top-0 left-0 bg-[#22D3EE] text-black text-xs font-bold py-1 px-2 
+               rounded-br-md z-10"
+      >
+        NEW
       </div>
-      <!-- Rubro 2 -->
-      <div class="bg-white border rounded-lg shadow hover:shadow-lg p-6">
-        <h2 class="text-xl font-semibold mb-2 text-[#000000]">Diseño Gráfico</h2>
-        <p class="text-gray-700 mb-4">
-          Branding, ilustraciones, packaging y todo lo que tu marca necesita para destacar.
+      <!-- Imagen -->
+      <img 
+        src="assets/img/galaxybuzz.png" 
+        alt="Marketing" 
+        class="w-full h-44 object-cover object-center transition-transform 
+               group-hover:scale-105"
+      >
+      <!-- Contenido -->
+      <div class="p-4">
+        <h2 class="text-2xl font-bold text-[#22D3EE] mb-2">Marketing</h2>
+        <p class="text-gray-300 mb-4">
+          Campañas virales, posicionamiento de marca, redes sociales, inteligencia de mercados.
         </p>
-        <a href="producto.html" class="text-[#E91E63] hover:underline">Ver proyectos &rarr;</a>
-      </div>
-      <!-- Rubro 3 -->
-      <div class="bg-white border rounded-lg shadow hover:shadow-lg p-6">
-        <h2 class="text-xl font-semibold mb-2 text-[#000000]">Programación</h2>
-        <p class="text-gray-700 mb-4">
-          Desarrollo web, apps móviles y soluciones tecnológicas de alto rendimiento.
-        </p>
-        <a href="producto.html" class="text-[#E91E63] hover:underline">Ver proyectos &rarr;</a>
-      </div>
-      <!-- Rubro 4 -->
-      <div class="bg-white border rounded-lg shadow hover:shadow-lg p-6">
-        <h2 class="text-xl font-semibold mb-2 text-[#000000]">Música</h2>
-        <p class="text-gray-700 mb-4">
-          Composición, producción y arreglos para spots, cortometrajes y artistas emergentes.
-        </p>
-        <a href="producto.html" class="text-[#E91E63] hover:underline">Ver proyectos &rarr;</a>
-      </div>
-      <!-- Rubro 5 -->
-      <div class="bg-white border rounded-lg shadow hover:shadow-lg p-6">
-        <h2 class="text-xl font-semibold mb-2 text-[#000000]">Producción Audiovisual</h2>
-        <p class="text-gray-700 mb-4">
-          Videoclips, cortometrajes, publicidad y animaciones con storytelling cautivador.
-        </p>
-        <a href="producto.html" class="text-[#E91E63] hover:underline">Ver proyectos &rarr;</a>
-      </div>
-      <!-- Rubro 6 -->
-      <div class="bg-white border rounded-lg shadow hover:shadow-lg p-6">
-        <h2 class="text-xl font-semibold mb-2 text-[#000000]">Liderazgo y Coaching</h2>
-        <p class="text-gray-700 mb-4">
-          Formación de equipos de alto rendimiento, mentorías y programas de desarrollo ejecutivo.
-        </p>
-        <a href="producto.html" class="text-[#E91E63] hover:underline">Ver proyectos &rarr;</a>
+        <a href="producto.html" 
+           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
+          Más Info →
+        </a>
       </div>
     </div>
-  </main>
+
+    <!-- Card 2: Diseño Gráfico -->
+    <div 
+      class="relative bg-[#1F2937] rounded-lg shadow-md overflow-hidden 
+             group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
+    >
+      <img 
+        src="assets/img/alt_producto1.jpg" 
+        alt="Diseño Gráfico" 
+        class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
+      >
+      <div class="p-4">
+        <h2 class="text-2xl font-bold text-[#22D3EE] mb-2">Diseño Gráfico</h2>
+        <p class="text-gray-300 mb-4">
+          Branding, ilustraciones, packaging y todo lo que tu marca necesita para destacar.
+        </p>
+        <a href="producto.html" 
+           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
+          Más Info →
+        </a>
+      </div>
+    </div>
+
+    <!-- Card 3: Programación -->
+    <div 
+      class="relative bg-[#1F2937] rounded-lg shadow-md overflow-hidden 
+             group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
+    >
+      <img 
+        src="assets/img/producto3.png" 
+        alt="Programación" 
+        class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
+      >
+      <div class="p-4">
+        <h2 class="text-2xl font-bold text-[#22D3EE] mb-2">Programación</h2>
+        <p class="text-gray-300 mb-4">
+          Desarrollo web, apps móviles y soluciones tecnológicas de alto rendimiento.
+        </p>
+        <a href="producto.html" 
+           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
+          Más Info →
+        </a>
+      </div>
+    </div>
+
+    <!-- Card 4: Liderazgo y Coaching -->
+    <div 
+      class="relative bg-[#1F2937] rounded-lg shadow-md overflow-hidden 
+             group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
+    >
+      <img 
+        src="assets/img/trabajador5.png" 
+        alt="Liderazgo y Coaching" 
+        class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
+      >
+      <div class="p-4">
+        <h2 class="text-2xl font-bold text-[#22D3EE] mb-2">Liderazgo & Coaching</h2>
+        <p class="text-gray-300 mb-4">
+          Formación de equipos de alto rendimiento, mentorías y programas de desarrollo ejecutivo.
+        </p>
+        <a href="producto.html" 
+           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
+          Más Info →
+        </a>
+      </div>
+    </div>
+
+    <!-- Card 5: Música -->
+    <div 
+      class="relative bg-[#1F2937] rounded-lg shadow-md overflow-hidden 
+             group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
+    >
+      <img 
+        src="assets/img/trabajador1.png" 
+        alt="Música" 
+        class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
+      >
+      <div class="p-4">
+        <h2 class="text-2xl font-bold text-[#22D3EE] mb-2">Música</h2>
+        <p class="text-gray-300 mb-4">
+          Composición, producción y arreglos para spots, cortometrajes y artistas emergentes.
+        </p>
+        <a href="producto.html" 
+           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
+          Más Info →
+        </a>
+      </div>
+    </div>
+
+    <!-- Card 6: Producción Audiovisual -->
+    <div 
+      class="relative bg-[#1F2937] rounded-lg shadow-md overflow-hidden 
+             group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
+    >
+      <img 
+        src="assets/img/trabajador2.png" 
+        alt="Producción Audiovisual" 
+        class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
+      >
+      <div class="p-4">
+        <h2 class="text-2xl font-bold text-[#22D3EE] mb-2">Producción Audiovisual</h2>
+        <p class="text-gray-300 mb-4">
+          Videoclips, cortometrajes, publicidad y animaciones con storytelling cautivador.
+        </p>
+        <a href="producto.html" 
+           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
+          Más Info →
+        </a>
+      </div>
+    </div>
+
+    <!-- Card 7: Big Data & Analítica -->
+    <div 
+      class="relative bg-[#1F2937] rounded-lg shadow-md overflow-hidden 
+             group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
+    >
+      <img 
+        src="assets/img/producto4.png" 
+        alt="Big Data" 
+        class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
+      >
+      <div class="p-4">
+        <h2 class="text-2xl font-bold text-[#22D3EE] mb-2">Big Data & Analítica</h2>
+        <p class="text-gray-300 mb-4">
+          Extrae conocimiento de tus datos para optimizar estrategias y tomar decisiones basadas en información real.
+        </p>
+        <a href="producto.html" 
+           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
+          Más Info →
+        </a>
+      </div>
+    </div>
+
+    <!-- Card 8: Ciberseguridad -->
+    <div 
+      class="relative bg-[#1F2937] rounded-lg shadow-md overflow-hidden 
+             group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
+    >
+      <img 
+        src="assets/img/trabajador3.png" 
+        alt="Ciberseguridad" 
+        class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
+      >
+      <div class="p-4">
+        <h2 class="text-2xl font-bold text-[#22D3EE] mb-2">Ciberseguridad</h2>
+        <p class="text-gray-300 mb-4">
+          Protege tus activos digitales con estrategias y herramientas que garanticen 
+          la continuidad de tu negocio.
+        </p>
+        <a href="producto.html" 
+           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
+          Más Info →
+        </a>
+      </div>
+    </div>
+
+    <!-- Card 9: E-commerce & Retail -->
+    <div 
+      class="relative bg-[#1F2937] rounded-lg shadow-md overflow-hidden 
+             group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
+    >
+      <img 
+        src="assets/img/trabajador4.png" 
+        alt="E-commerce & Retail" 
+        class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
+      >
+      <div class="p-4">
+        <h2 class="text-2xl font-bold text-[#22D3EE] mb-2">E-commerce & Retail</h2>
+        <p class="text-gray-300 mb-4">
+          Creación y optimización de tiendas online, estrategias de venta y gestión integral de inventario.
+        </p>
+        <a href="producto.html" 
+           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
+          Más Info →
+        </a>
+      </div>
+    </div>
+
+  </div>
+</main>
+
+
+
+
 
   <!-- FOOTER -->
-<footer class="bg-[#111827] text-white pt-10 pb-6 mt-8">
+<footer class="bg-[#111827] text-white pt-10 pb-6 ">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
   
       <!-- GRID principal: 3 columnas en desktop, 1 en móvil -->
