Agregue nuevas imagenes

--- a/rubros.html
+++ b/rubros.html
@@ -117,7 +117,7 @@
       </div>
       <!-- Imagen -->
       <img 
-        src="assets/img/galaxybuzz.png" 
+        src="assets/img/marketing.png" 
         alt="Marketing" 
         class="w-full h-44 object-cover object-center transition-transform 
                group-hover:scale-105"
@@ -141,7 +141,7 @@
              group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
     >
       <img 
-        src="assets/img/alt_producto1.jpg" 
+        src="assets/img/diseño grafico.png" 
         alt="Diseño Gráfico" 
         class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
       >
@@ -163,7 +163,7 @@
              group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
     >
       <img 
-        src="assets/img/producto3.png" 
+        src="assets/img/programacion.png" 
         alt="Programación" 
         class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
       >
@@ -185,7 +185,7 @@
              group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
     >
       <img 
-        src="assets/img/trabajador5.png" 
+        src="assets/img/trabajador4.png" 
         alt="Liderazgo y Coaching" 
         class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
       >
@@ -207,7 +207,7 @@
              group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
     >
       <img 
-        src="assets/img/trabajador1.png" 
+        src="assets/img/musica.png" 
         alt="Música" 
         class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
       >
@@ -229,7 +229,7 @@
              group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
     >
       <img 
-        src="assets/img/trabajador2.png" 
+        src="assets/img/grabacion.png" 
         alt="Producción Audiovisual" 
         class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
       >
@@ -251,7 +251,7 @@
              group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
     >
       <img 
-        src="assets/img/producto4.png" 
+        src="assets/img/redes.png" 
         alt="Big Data" 
         class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
       >
@@ -273,7 +273,7 @@
              group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
     >
       <img 
-        src="assets/img/trabajador3.png" 
+        src="assets/img/nube.png" 
         alt="Ciberseguridad" 
         class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
       >
@@ -296,7 +296,7 @@
              group hover:shadow-[0_0_15px_#22D3EE] hover:scale-[1.02] transition-all duration-300"
     >
       <img 
-        src="assets/img/trabajador4.png" 
+        src="assets/img/ilustracion.png" 
         alt="E-commerce & Retail" 
         class="w-full h-44 object-cover object-center transition-transform group-hover:scale-105"
       >
