Extraccion de palabras relacionadas a mineria

--- a/rubros.html
+++ b/rubros.html
@@ -95,7 +95,7 @@
   <div class="max-w-7xl mx-auto text-center mb-10">
     <h1 class="text-4xl font-bold mb-4 text-[#22D3EE]">Nuestros Rubros</h1>
     <p class="text-gray-300 max-w-2xl mx-auto">
-      Exploramos diversos sectores (excepto minería) y ofrecemos soluciones creativas 
+      Exploramos diversos sectores y ofrecemos soluciones creativas 
       para impulsar tus proyectos. ¡Descubre cómo podemos ayudarte!
     </p>
   </div>
@@ -330,8 +330,8 @@
         <div>
           <h3 class="text-white font-semibold mb-3 text-lg">Jech Company</h3>
           <p class="text-gray-300 text-sm leading-relaxed mb-4">
-            Nuestros talentos viven la pasión por innovar en cualquier rubro imaginable 
-            (excepto minería). Creemos en el poder de la creatividad y la tecnología para 
+            Nuestros talentos viven la pasión por innovar en cualquier ambito imaginable. 
+            Creemos en el poder de la creatividad y la tecnología para 
             llevar cada proyecto al siguiente nivel.
           </p>
           <!-- Pequeña lista de "stats" o fortalezas (opcionales) -->
