--- a/contacto.html
+++ b/contacto.html
@@ -186,7 +186,7 @@
           <h3 class="text-white font-semibold mb-3 text-lg">Jech Company</h3>
           <p class="text-gray-300 text-sm leading-relaxed mb-4">
             Nuestros talentos viven la pasión por innovar en cualquier rubro imaginable 
-            (excepto minería). Creemos en el poder de la creatividad y la tecnología para 
+            . Creemos en el poder de la creatividad y la tecnología para 
             llevar cada proyecto al siguiente nivel.
           </p>
           <!-- Pequeña lista de "stats" o fortalezas (opcionales) -->
