--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ style="background-image: url('assets/img/profesionales.png');"
       <div class="p-4">
         <h3 class="text-xl font-semibold mb-2 text-[#111827]">Campaña de Marketing Viral</h3>
         <p class="text-gray-600 mb-4">
-          Creamos estrategias publicitarias con impacto mundial para marcas emergentes.
+          Creamos estrategias publicitarias con impacto mundial para marcas emergentes y experimentadas.
         </p>
         <a href="producto.html" class="text-[#E91E63] hover:underline">Ver detalle &rarr;</a>
       </div>
@@ -297,7 +297,7 @@ style="background-image: url('assets/img/profesionales.png');"
           <h3 class="text-white font-semibold mb-3 text-lg">Jech Company</h3>
           <p class="text-gray-300 text-sm leading-relaxed mb-4">
             Nuestros talentos viven la pasión por innovar en cualquier rubro imaginable 
-            (excepto minería). Creemos en el poder de la creatividad y la tecnología para 
+            . Creemos en el poder de la creatividad y la tecnología para 
             llevar cada proyecto al siguiente nivel.
           </p>
           <!-- Pequeña lista de "stats" o fortalezas (opcionales) -->
