Mejora de colores en el index

--- a/rubros.html
+++ b/rubros.html
@@ -90,7 +90,7 @@
   </nav>
 </div>
 
-<!-- LISTADO DE RUBROS: 9 Tarjetas con CTA "Más Info →" en color ámbar -->
+<!-- LISTADO DE RUBROS: 9 Tarjetas con CTA "Más Información →" en color ámbar -->
 <main class="w-full bg-gradient-to-b from-[#111827] to-[#1E293B] text-white py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-7xl mx-auto text-center mb-10">
     <h1 class="text-4xl font-bold mb-4 text-[#22D3EE]">Nuestros Rubros</h1>
@@ -113,7 +113,7 @@
         class="absolute top-0 left-0 bg-[#22D3EE] text-black text-xs font-bold py-1 px-2 
                rounded-br-md z-10"
       >
-        NEW
+        NUEVO
       </div>
       <!-- Imagen -->
       <img 
@@ -129,8 +129,8 @@
           Campañas virales, posicionamiento de marca, redes sociales, inteligencia de mercados.
         </p>
         <a href="producto.html" 
-           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
-          Más Info →
+           class="inline-block text-purple-400 font-semibold hover:text-purple-500 transition-colors">
+          Más Información →
         </a>
       </div>
     </div>
@@ -151,8 +151,8 @@
           Branding, ilustraciones, packaging y todo lo que tu marca necesita para destacar.
         </p>
         <a href="producto.html" 
-           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
-          Más Info →
+           class="inline-block text-purple-400 font-semibold hover:text-purple-500 transition-colors">
+          Más Información →
         </a>
       </div>
     </div>
@@ -173,8 +173,8 @@
           Desarrollo web, apps móviles y soluciones tecnológicas de alto rendimiento.
         </p>
         <a href="producto.html" 
-           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
-          Más Info →
+           class="inline-block text-purple-400 font-semibold hover:text-purple-500 transition-colors">
+          Más Información →
         </a>
       </div>
     </div>
@@ -195,8 +195,8 @@
           Formación de equipos de alto rendimiento, mentorías y programas de desarrollo ejecutivo.
         </p>
         <a href="producto.html" 
-           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
-          Más Info →
+           class="inline-block text-purple-400 font-semibold hover:text-purple-500 transition-colors">
+          Más Información →
         </a>
       </div>
     </div>
@@ -217,8 +217,8 @@
           Composición, producción y arreglos para spots, cortometrajes y artistas emergentes.
         </p>
         <a href="producto.html" 
-           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
-          Más Info →
+           class="inline-block text-purple-400 font-semibold hover:text-purple-500 transition-colors">
+          Más Información →
         </a>
       </div>
     </div>
@@ -239,8 +239,8 @@
           Videoclips, cortometrajes, publicidad y animaciones con storytelling cautivador.
         </p>
         <a href="producto.html" 
-           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
-          Más Info →
+           class="inline-block text-purple-400 font-semibold hover:text-purple-500 transition-colors">
+          Más Información →
         </a>
       </div>
     </div>
@@ -261,8 +261,8 @@
           Extrae conocimiento de tus datos para optimizar estrategias y tomar decisiones basadas en información real.
         </p>
         <a href="producto.html" 
-           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
-          Más Info →
+           class="inline-block text-purple-400 font-semibold hover:text-purple-500 transition-colors">
+          Más Información →
         </a>
       </div>
     </div>
@@ -284,8 +284,8 @@
           la continuidad de tu negocio.
         </p>
         <a href="producto.html" 
-           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
-          Más Info →
+           class="inline-block text-purple-400 font-semibold hover:text-purple-500 transition-colors">
+          Más Información →
         </a>
       </div>
     </div>
@@ -306,8 +306,8 @@
           Creación y optimización de tiendas online, estrategias de venta y gestión integral de inventario.
         </p>
         <a href="producto.html" 
-           class="inline-block text-amber-400 font-semibold hover:text-amber-300 transition-colors">
-          Más Info →
+           class="inline-block text-purple-400 font-semibold hover:text-purple-500 transition-colors">
+          Más Información →
         </a>
       </div>
     </div>
