--- a/contacto.html
+++ b/contacto.html
@@ -133,27 +133,36 @@
     <!-- COLUMNA DERECHA: FORMULARIO -->
     <div class="bg-[#1E293B] p-8 rounded-lg shadow-lg border border-[#22D3EE]">
       <h3 class="text-3xl font-semibold text-[#22D3EE] mb-6 text-center">Envíanos un mensaje</h3>
-      <form action="#" method="post">
+
+      <form action="https://api.web3forms.com/submit" method="POST">
+
+        <!-- CAMPOS OCULTOS NECESARIOS -->
+        <input type="hidden" name="access_key" value="11e59137-d5a7-4dfc-a718-b867ead586d0">
+        <input type="hidden" name="subject" value="Nuevo mensaje de contacto desde Jech Company">
+        <input type="hidden" name="from_name" value="Jech Company">
+        <input type="hidden" name="redirect" value="/JechCompany/exito.html">
+        <input type="checkbox" name="botcheck" class="hidden">
+
         <!-- Campo Nombre -->
         <div class="mb-4">
-          <label for="name" class="block text-gray-300 font-semibold mb-2">Nombre</label>
-          <input type="text" id="name" name="name" required
+          <label for="nombre" class="block text-gray-300 font-semibold mb-2">Nombre</label>
+          <input type="text" id="nombre" name="nombre" required
                  class="w-full border border-gray-500 bg-[#2D3748] text-white rounded px-3 py-2 
                         focus:outline-none focus:border-[#22D3EE] focus:ring-1 focus:ring-[#22D3EE]">
         </div>
 
         <!-- Campo Email -->
         <div class="mb-4">
-          <label for="email" class="block text-gray-300 font-semibold mb-2">Correo Electrónico</label>
-          <input type="email" id="email" name="email" required
+          <label for="correo" class="block text-gray-300 font-semibold mb-2">Correo Electrónico</label>
+          <input type="email" id="correo" name="correo" required
                  class="w-full border border-gray-500 bg-[#2D3748] text-white rounded px-3 py-2 
                         focus:outline-none focus:border-[#22D3EE] focus:ring-1 focus:ring-[#22D3EE]">
         </div>
 
         <!-- Campo Mensaje -->
         <div class="mb-4">
-          <label for="message" class="block text-gray-300 font-semibold mb-2">Mensaje</label>
-          <textarea id="message" name="message" required
+          <label for="mensaje" class="block text-gray-300 font-semibold mb-2">Mensaje</label>
+          <textarea id="mensaje" name="mensaje" required
                     class="w-full border border-gray-500 bg-[#2D3748] text-white rounded px-3 py-2 h-36 
                            focus:outline-none focus:border-[#22D3EE] focus:ring-1 
                            focus:ring-[#22D3EE] resize-none"></textarea>
@@ -167,9 +176,9 @@
         </button>
       </form>
     </div>
-
   </div>
 </section>
+
 
 
 
