fix: redirect to githubpages exito.html

--- a/contacto.html
+++ b/contacto.html
@@ -140,7 +140,7 @@
         <input type="hidden" name="access_key" value="11e59137-d5a7-4dfc-a718-b867ead586d0">
         <input type="hidden" name="subject" value="Nuevo mensaje de contacto desde Jech Company">
         <input type="hidden" name="from_name" value="Jech Company">
-        <input type="hidden" name="redirect" value="/JechCompany/exito.html">
+        <input type="hidden" name="redirect" value="https://analizajech.github.io/JechCompany/exito.html">
         <input type="checkbox" name="botcheck" class="hidden">
 
         <!-- Campo Nombre -->
